Replace with Stream#toList